Add content to funny-cake.html
Content added to funny-cake.html including Description, Ingredients, and Steps

--- a/recipes/funny-cake.html
+++ b/recipes/funny-cake.html
@@ -6,5 +6,31 @@
     </head>
     <body>
         <h1>Funny Cake</h1>
+        <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fmedia-cache-ec0.pinimg.com%2F736x%2F47%2F7f%2F3c%2F477f3c504bfc99edf6f40f1c154ccebf.jpg&f=1&nofb=1&ipt=6a9486a73231be8e03c76e04157e5f18c00ec6c5472f3c5f256ba7b290350f2d&ipo=images" alt="a picture of a pie with an upper layer of white cake and a lower layer of gooey chocolate">
+        <h2>Description</h2>
+        <p>This is a Pennsylvania Dutch recipe traditionally served at breakfast. Funny Cake is a wet bottom pie with a white cake layer on the top and a gooey chocolate layer on the bottom</p>
+        <p>It is called Funny Cake because the chocolate layer is actually poured on the top of the white layer when preparing the pie, but during baking the layers switch, leaving us with this tasty and unique pastry</p>
+        <h2>Ingredients</h2>
+            <ul>
+                <li>2 cups sugar, divided</li>
+                <li>1/2 cup baking cocoa</li>
+                <li>1 1/2 cups whole milk, divided</li>
+                <li>2 sheets refrigerated pie crust</li>
+                <li>2 cups flour</li>
+                <li>2 teaspoons baking powder</li>
+                <li>1/4 teaspoon salt</li> 
+                <li>1 large egg</li>
+                <li>2 tablespoons shortening</li>
+                <li>1 teaspoon vanilla extract</li>               
+            </ul>
+        <h2>Steps</h2>
+            <ol>
+                <li>In a small saucepan, combine 1 cup of sugar and cocoa. Blend in 1/2 cup milk. Cook and stir over medium heat until mixture comes to a boil. Cook and stir until thickened, about 2 minutes.</li>
+                <li>In a bowl, combine flour, baking powder, salt and remaining sugar. Add egg, shortening, vanilla and remaining milk; beat until smooth</li>
+                <li>Unroll crusts into 9-in. pie plates.</li>
+                <li>Starting at the edge, spoon batter into the crusts, completely covering the bottom of the crust.</li>
+                <li>Pour chocolate mixture into crusts</li>
+                <li>Bake at 350° for 40 minutes or until a toothpick inserted in the center comes out clean. Serve warm or chilled with whipped cream if desired.</li>
+            </ol>
     </body>
 </html>
