Add links to new files pig-stomach.html and sticky-buns.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
         <h1>Odin Recipes</h1>
         <ul>
             <li><a href="recipes/funny-cake.html">Funny Cake</a></li>
+            <li><a href="recipes/pig-stomach.html">Pig Stomach</a></li>
+            <li><a href="recipes/sticky-buns.html">Sticky Buns</a></li>
         </ul>
     </body>
 </html>
