CSS style updated

--- a/recipes/pig-stomach.html
+++ b/recipes/pig-stomach.html
@@ -8,9 +8,11 @@
     <body>
         <h1>Pig Stomach</h1>
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fi.pinimg.com%2F736x%2F82%2Fce%2F14%2F82ce1426213a618116d1396abe2a088b--stuffed-pig-pennsylvania-dutch-recipes.jpg&f=1&nofb=1&ipt=cbd13d1b0de95b6745b99c7f82f8bec51344778718b27b73cbff899bc86cd686&ipo=images" alt="a picture of a slice of baked pig stomach stuffed with sausage, ground meat, and potatoes">
-        <h2>Description</h2>
-        <p>Pig Stomach, also traditionally called Hog Maw, is a hearty Pennsylvania Dutch meal. If you've ever met a Dutchmen, you will know that meat and potatoes are the heart of all their favorite meals. Pig Stomach is a mixture of ground pork, loose sausage, and potatoes, with the pig stomach acting as a casing for the mixture</p>
-        <p>If thinking about handling a pig's stomach is making you queazy, don't worry. You can still make and enjoy this recipe without using a pig stomach by creating a sausage loaf</p>
+        <div>
+            <h2>Description</h2>
+            <p>Pig Stomach, also traditionally called Hog Maw, is a hearty Pennsylvania Dutch meal. If you've ever met a Dutchmen, you will know that meat and potatoes are the heart of all their favorite meals. Pig Stomach is a mixture of ground pork, loose sausage, and potatoes, with the pig stomach acting as a casing for the mixture</p>
+            <p>If thinking about handling a pig's stomach is making you queazy, don't worry. You can still make and enjoy this recipe without using a pig stomach by creating a sausage loaf</p>
+        </div>
         <h2>Ingredients</h2>
             <ul>
                 <li>1 cleaned pig stomach</li>
