--- a/recipes/sticky-buns.html
+++ b/recipes/sticky-buns.html
@@ -8,10 +8,12 @@
     <body>
         <h1>Sticky Buns</h1>
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.mybakingaddiction.com%2Fwp-content%2Fuploads%2F2018%2F11%2Fsticky-buns-4-1000-1.jpg&f=1&nofb=1&ipt=e5c4f67eca6bff8579e7788c18a27a5c88983d7a0922cfdc13f9e76cd2aa3cff&ipo=images" alt="a picture of a sticky bun, which is a doughy pastry roll with cinnamon inside, covered in a molasses syrup, topped with pecans">
-        <h2>Description</h2>
-        <p>This sweet dessert is Pennsylvania Dutch class, and also one of my favorite breakfast orders at our local café when paired with a good cup of coffee.</p>
-        <p>This is a family recipe that is best eaten warm from the oven. With this recipe, you can enjoy sleeping in and still have a fabulous breakfast, as these sticky buns can be prepared ahead, and kept in the fridge unbaked until the next morning.</p>
-        <h2>Ingredients</h2>
+        <div>
+            <h2>Description</h2>
+            <p>This sweet dessert is Pennsylvania Dutch class, and also one of my favorite breakfast orders at our local café when paired with a good cup of coffee.</p>
+            <p>This is a family recipe that is best eaten warm from the oven. With this recipe, you can enjoy sleeping in and still have a fabulous breakfast, as these sticky buns can be prepared ahead, and kept in the fridge unbaked until the next morning.</p>
+        </div>
+            <h2>Ingredients</h2>
             <ul>
                 <li>10 cups flour</li>
                 <li>1 cup sugar</li>
