--- a/recipes/funny-cake.html
+++ b/recipes/funny-cake.html
@@ -8,9 +8,11 @@
     <body>
         <h1>Funny Cake</h1>
         <img src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fmedia-cache-ec0.pinimg.com%2F736x%2F47%2F7f%2F3c%2F477f3c504bfc99edf6f40f1c154ccebf.jpg&f=1&nofb=1&ipt=6a9486a73231be8e03c76e04157e5f18c00ec6c5472f3c5f256ba7b290350f2d&ipo=images" alt="a picture of a pie with an upper layer of white cake and a lower layer of gooey chocolate">
-        <h2>Description</h2>
-        <p>This is a Pennsylvania Dutch recipe traditionally served at breakfast. Funny Cake is a wet bottom pie with a white cake layer on the top and a gooey chocolate layer on the bottom</p>
-        <p>It is called Funny Cake because the chocolate layer is actually poured on the top of the white layer when preparing the pie, but during baking the layers switch, leaving us with this tasty and unique pastry</p>
+        <div>
+            <h2>Description</h2>
+            <p>This is a Pennsylvania Dutch recipe traditionally served at breakfast. Funny Cake is a wet bottom pie with a white cake layer on the top and a gooey chocolate layer on the bottom</p>
+            <p>It is called Funny Cake because the chocolate layer is actually poured on the top of the white layer when preparing the pie, but during baking the layers switch, leaving us with this tasty and unique pastry</p>
+        </div>
         <h2>Ingredients</h2>
             <ul>
                 <li>2 cups sugar, divided</li>
